# markupy_htmx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
scripts/: release.sh  test.sh
src/markupy_htmx/: __init__.py  attributes.py
src/markupy_htmx/_private/: __init__.py  attributes.py  htmx.py
src/tests/: conftest.py  test_htmx.py
