[project]
name = "markupy_htmx"
description = "An HTMX extension for markupy"
dynamic = ["version"]
authors = [
  { name="witiz", email="markupy@witiz.com" },
]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

requires-python = ">=3.10"
dependencies = [
    "markupy>=2.1.0",
]

[dependency-groups]
dev = [
    "flit>=3.12.0",
    "mypy>=1.15.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[project.urls]
Repository = "https://github.com/witiz/markupy_htmx"
Issues = "https://github.com/witiz/markupy_htmx/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "markupy_htmx"

[tool.mypy]
strict = true
files = "src/**/*.py"
exclude = ["scripts"]

[tool.pyright]
include = ["src"]
strict = ["src"]

